2005-05-11  Dave Morrison  <dmrrsn@users.sourceforge.net>

	* VERSION: Bumped package manager version to 0.23.10, a release
	on branch_0_23 intended for 10.4-transitional/stable only

2005-05-11  Dave Morrison  <dmrrsn@sourceforge.net> (thanks to msachs)

        * postinstall.pl.in: create 10.4 tree as a symlink to 
	10.4-transitional (temporary, until we create a real 10.4 tree)

2005-04-28  Dave Morrison  <dmrrsn@users.sourceforge.net>

	* VERSION: Bumped package manager version to 0.23.9, a release
	on branch_0_23 intended for 10.4-transitional/stable only

2005-04-26  Dave Morrison  <dmrrsn@users.sourceforge.net>

	* install.sh: backporting the final version of path prefixes

2005-04-23  Dave Morrison  <dmrrsn@users.sourceforge.net>

	* path-prefix-g++-3.3 path-prefix-g++-4.0, install.sh: use two 
	possible path prefixes, path-prefix-g++-3.3 and path-prefix-g++-4.0, 
	depending on the current Distribution

2005-04-22  Dave Morrison  <dmrrsn@users.sourceforge.net>

	* VERSION: Bumped package manager version to 0.23.8, a release
	on branch_0_23 bringing one more feature to stable

2005-04-21  Dave Morrison  <dmrrsn@users.sourceforge.net>

	* VERSION: Bumped package manager version to 0.23.7, a release
	on branch_0_23 bringing a few recent features to stable

2005-02-17  Dave Morrison  <dmrrsn@users.sourceforge.net>

	* VERSION: Bumped package manager version to 0.23.6, a bugfix
	release on branch_0_23

2005-02-13  Dave Morrison  <dmrrsn@users.sourceforge.net>

	* bootstrap.pl, fink.info.in: allow the creation of several .info
	files from a single .info.in, depending on %{Distribution}
	* REVISION: new file to specify revision numbers for variant info files

2005-01-22  Dave Morrison  <dmrrsn@users.sourceforge.net>

	* bootstrap.pl: allow bootstrapping with perl 5.8.6, not perl 5.8.4

2005-01-02  Dave Morrison  <dmrrsn@users.sourceforge.net>

	* all: updated Copyright notice

2004-12-20  Dave Morrison  <dmrrsn@users.sourceforge.net>
